# indonesia-financial-data-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
dashboard/: IMPLEMENTATION.md  __init__.py  __main__.py  app.py
dashboard/static/: app.js  index.html  styles.css
dashboard/static/fonts/: OFL.txt
docs/: HERMES.md  SOURCES.md
src/indonesia_data_mcp/: __init__.py  bps.py  filing.py  http.py  idx.py  ksei.py  models.py  server.py
tests/: test_bps_ksei.py  test_dashboard.py  test_idx_client.py  test_idx_session.py  test_idx_tls_fallback.py  test_live_smoke.py  test_mcp_server.py  test_provenance.py  test_xbrl_filing.py
