[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indonesia-financial-data-mcp"
version = "0.1.0"
description = "Citation-first MCP server for official Indonesian financial data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "agentpixelated"}]
dependencies = [
  "curl_cffi>=0.7,<1",
  "httpx>=0.27,<1",
  "mcp>=1.9,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
]

[project.scripts]
indonesia-financial-data-mcp = "indonesia_data_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
