[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "indonesia-financial-data-mcp"
version = "0.2.0"
description = "Official-source Indonesian financial data MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agentpixelated" }]
dependencies = [
  "mcp>=1.9.0",
  "httpx>=0.27.0",
  "curl_cffi>=0.11.0",
  "openpyxl>=3.1.0",
  "starlette>=0.37.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-httpx>=0.30.0",
  "respx>=0.21.0",
]

dashboard = [
  "starlette>=0.37.0",
  "uvicorn>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/indonesia_data_mcp", "dashboard"]

[tool.hatch.build.targets.wheel.force-include]
"dashboard/static" = "dashboard/static"

[tool.hatch.build]
include = [
  "src/indonesia_data_mcp/**/*.py",
  "dashboard/**/*.py",
  "dashboard/static/*.html",
  "dashboard/static/*.css",
  "dashboard/static/*.js",
  "dashboard/static/fonts/*.woff2",
  "dashboard/static/fonts/*.txt",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: calls official upstream sources and may require network access",
]
